Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.37.0
-
None
Description
See the C++ frame trace from
https://issues.redhat.com/browse/ENTMQCL-3278
The zero length array is printed instead of a null because the test in emit_multiple() from emitters.h fails to set the current node of the pn_data_t to the first node. The test
if (pn_data_type(data) == PN_ARRAY) { //...
fails and the array processing logic is bypassed, including the lines
switch (pn_data_get_array(data)) {
case 0:
pni_emitter_writef8(emitter, PNE_NULL);