PROTON-2517: for pn_data used by emitters, save point, rewind, restore.  This closes #362